src/scss/components/_modal.scss
.modal {
  max-width: 460px;
  width: 100%;
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  right: 0;
  margin: 0 auto;
  background-color: $white-color;
  padding: 50px 80px;
  background-image: url('../img/main-section-bg.jpg');
  visibility: hidden;
  opacity: 0;
  transition: opacity .3s;

  &.active {
    visibility: visible;
    opacity: 1;
  }

  &__title {
    font-size: 30px;
    line-height: 42px;
  }

  &__text {
    margin: 15px 0 12px;
  }

  &__field {
    display: block;
    outline: none;
    height: 42px;
    border: 2px solid $black-color;
    width: 100%;
    padding: 0 50px 0 15px;

    &-wrapper {
      margin-bottom: 10px;
      position: relative;

      &:after {
        content: '';
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        right: 25px;
      }

      &.login:after {
        width: 12px;
        height: 11px;
        background-image: url('../img/login-icon.png');
      }

      &.password:after {
        width: 12px;
        height: 15px;
        background-image: url('../img/lock-icon.png');
      }
    }

    &:focus {
      border-color: $brown;
    }

    &::placeholder {
      color: $black-color;
    }
  }

  &__close {
    position: absolute;
    width: 17px;
    height: 17px;
    top: 10px;
    right: -32px;
    outline: none;

    svg {
      width: 100%;
      height: 100%;
      fill: #999999;
      transition: fill .2s;
    }

    &:hover,
    &:focus {
      svg {
        fill: $white-color;
      }
    }
  }

  &__additional {
    display: flex;
    justify-content: space-between;
    margin-bottom: 16px;
  }

  &__label {
    display: flex;
    align-items: center;
    cursor: pointer;

    &:not(.disabled):hover {
      .modal__checkbox-text {
        color: $brown;
      }
    }

    &.disabled {
      pointer-events: none;
    }
  }

  &__checkbox {

    &-real {
      width: 1px;
      height: 1px;
      position: absolute;
      opacity: 0;
      appearance: none;
    }

    &-real:checked + .modal__checkbox-fake:before,
    &-real:checked + .modal__checkbox-fake:after {
      display: block;
    }

    &-fake {
      flex: none;
      width: 20px;
      height: 20px;
      border: 2px solid $black-color;
      margin-right: 13px;
      position: relative;

      &:before,
      &:after {
        content: '';
        display: none;
        position: absolute;
        width: 14px;
        height: 2px;
        top: 7px;
        left: calc(50% - 7px);
        background-color: $black-color;
      }

      &:before {
        transform: rotate(45deg);
      }

      &:after {
        transform: rotate(-45deg);
      }
    }

    &-text {
      line-height: 18px;
      transition: color .2s;
    }
  }

  &__forgot-password {
    display: inline-block;
    position: relative;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      bottom: 4px;
      width: 100%;
      height: 1px;
      background-color: $black-color;
    }
  }
}

